# databricks-workflow

./: .gitignore  Makefile  README.md  build.sbt  deploy_jobs.sh
dbdeploy/: main.py  pyproject.toml
doc/: databricks_community_edition_instructions.md
jobs/: Readme.md  build.sbt
jobs/environments/: integration_test.json  production.json  staging.json
jobs/job_configuration/: _base_.json  create_features.json  initialize.json  monitor_presence_model.json
jobs/multitask/: pipeline.json
jobs/notebooks/: create_features.scala  initialize.scala  monitor_presence_model.scala  train_presence_model.scala
project/: plugins.sbt
scala/: .gitignore  Makefile  build.sbt
scala/project/: plugins.sbt
scala/src/main/resources/: log4j.properties
scala/src/main/scala/com/quby/demo/databricks/ml/: PresencePrediction.scala  RecommendationSystem.scala
scala/src/main/scala/com/quby/demo/databricks/schema/: ElectricityPowerSchema.scala  PresenceLabelSchema.scala  RawSchema.scala  UserRatingSchema.scala
scala/src/main/scala/com/quby/demo/databricks/storage/: CatalogHelper.scala  DeltaRepository.scala  Repository.scala  SampleRepository.scala  TableNames.scala
scala/src/main/scala/com/quby/demo/databricks/transformations/: ElectricityPower.scala  PresenceLabel.scala
scala/src/test/resources/: derby.properties  log4j.properties
scala/src/test/scala/com/quby/demo/databricks/: BaseTest.scala
scripts/: deploy_jobs.sh  dev.sh  download_artifacts.sh  import_notebooks.sh  install_library_on_cluster.sh  publish_artifacts.sh  run_jobs.sh  upload_notebooks_and_jar.sh
(+8 files in other folders)
