[tool.poetry]
name = "dbdeploy"
version = "0.1.0"
description = ""
authors = ["Erni Durdevic <erni.durdevic@quby.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
databricks-cli = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
